RESOLVED FIXED47101
AX: doAXRangeForLine does not work
https://bugs.webkit.org/show_bug.cgi?id=47101
Summary AX: doAXRangeForLine does not work
chris fleizach
Reported 2010-10-04 12:06:21 PDT
asking for NSAccessibilityRangeForLineParameterizedAttribute from a textarea always give a zero range back
Attachments
Patch (11.29 KB, patch)
2010-10-04 12:23 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-10-04 12:14:39 PDT
It looks like doing this call to find the end of the line selection.modify(SelectionController::AlterationExtend, SelectionController::DirectionRight, LineBoundary); does not do what's expected. I suspect it thinks the end of the line is the same position as the start of the line. I think the better solution is to just use the existing endOfLine() method that already exists.
chris fleizach
Comment 2 2010-10-04 12:23:16 PDT
chris fleizach
Comment 3 2010-10-04 14:03:55 PDT
Note You need to log in before you can comment on or make changes to this bug.